@@ -1,3 +1,8 @@
+2010-04-02 Starboy Qi <starboy.qi@gmail.com>
+
+    * Improve copyright text in "About" dialog
+    * Move "Reclaim memory" and "Clean recent documents" to "Clean up" pane.
+
 2010-04-02 Homer Xing <homer.xing@gmail.com>
 
     * Merge apt-recovery.desktop and rpm-recovery.desktop
